Add survival commands and chairs, fix many things