@@ -1,50 +1,49 @@
 package snoot.chairs;
 
+import org.bukkit.ChatColor;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 import snoot.Main;
 import snoot.parents.SnootCommandExecutor;
-import snoot.util.MessageFormat;
 
-import java.util.List;
-import java.util.Map;
+import java.util.ArrayList;
+import java.util.Collections;
 
 public class ChairsCommandExecutor extends SnootCommandExecutor {
 
-    ChairsCommandExecutor() {
-        super("family of commands to sit on stairs");
+    public ChairsCommandExecutor() {
+        super("group of commands for sitting on stairs", "snoot.chairs", true);
         addSubCommand(new SubCommand(
                 "off",
                 "",
                 "turn chairs off",
-                "snoot.chairs",
-                Map.of(0, ChairsCommandExecutor::commandOff)));
+                null,
+                Collections.singletonMap(0, ChairsCommandExecutor::commandOff)));
         addSubCommand(new SubCommand(
                 "on",
                 "",
                 "turn chairs on",
-                "snoot.chairs",
-                Map.of(0, ChairsCommandExecutor::commandOn)));
-        initialize();
+                null,
+                Collections.singletonMap(0, ChairsCommandExecutor::commandOn)));
     }
 
-    private static void commandOff(CommandSender sender, List<String> args) {
+    private static void commandOff(final CommandSender sender, final ArrayList<String> args) {
         if (!Main.getChairsManager().chairsEnabled((Player)sender)) {
-            sender.sendMessage(MessageFormat.error("Chairs is already turned off."));
-        } else {
-            Main.getChairsManager().disableChairs((Player)sender);
-            sender.sendMessage(MessageFormat.success("Chairs has been turned off."));
+            sender.sendMessage(ChatColor.RED + "Chairs is already turned off.");
+            return;
         }
+        Main.getChairsManager().disableChairs((Player)sender);
+        sender.sendMessage( ChatColor.GREEN + "Chairs has been turned off.");
     }
 
 
-    private static void commandOn(CommandSender sender, List<String> args) {
+    private static void commandOn(final CommandSender sender, final ArrayList<String> args) {
         if (Main.getChairsManager().chairsEnabled((Player)sender)) {
-            sender.sendMessage(MessageFormat.error("Chairs is already turned on."));
-        } else {
-            Main.getChairsManager().enableChairs((Player)sender);
-            sender.sendMessage(MessageFormat.success("Chairs has been turned on."));
+            sender.sendMessage( ChatColor.RED + "Chairs is already turned on.");
+            return;
         }
+        Main.getChairsManager().enableChairs((Player)sender);
+        sender.sendMessage(ChatColor.GREEN + "Chairs has been turned on.");
     }
 
 }
