@@ -5,44 +5,41 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 import snoot.Main;
 import snoot.parents.SnootCommandExecutor;
-import snoot.util.MessageFormat;
 
-import java.util.List;
-import java.util.Map;
+import java.util.ArrayList;
+import java.util.Collections;
 
 public class NickCommandExecutor extends SnootCommandExecutor {
 
-    NickCommandExecutor() {
-        super("family of commands to change your nickname");
+    public NickCommandExecutor() {
+        super("group of commands for changing your nickname", "snoot.chat.nick", true);
         addSubCommand(new SubCommand(
                 "remove",
                 "",
                 "remove your current nickname",
-                "snoot.chat.nick",
-                Map.of(0, NickCommandExecutor::commandRemove),
-                true));
+                null,
+                Collections.singletonMap(0, NickCommandExecutor::commandRemove)));
         addSubCommand(new SubCommand(
                 "set",
                 "",
                 "change your current nickname",
-                "snoot.chat.nick",
-                Map.of(1, NickCommandExecutor::commandSet),
+                null,
+                Collections.singletonMap(1, NickCommandExecutor::commandSet),
                 true));
-        initialize();
     }
 
-    private static void commandRemove(CommandSender sender, List<String> args) {
+    private static void commandRemove(CommandSender sender, ArrayList<String> args) {
         if (!Main.getChatManager().hasNick((Player)sender)) {
-            sender.sendMessage(MessageFormat.error("You do not have a nickname."));
-        } else {
-            Main.getChatManager().setNick((Player) sender, null);
-            sender.sendMessage(MessageFormat.success("Your nickname has been removed."));
+            sender.sendMessage(ChatColor.RED + "You do not have a nickname.");
+            return;
         }
+        Main.getChatManager().setNick((Player) sender, null);
+        sender.sendMessage(ChatColor.GREEN + "Your nickname has been removed.");
     }
 
-    private static void commandSet(CommandSender sender, List<String> args) {
-        Main.getChatManager().setNick((Player)sender, ChatColor.translateAlternateColorCodes('&', args.get(0)) + ChatColor.RESET);
-        sender.sendMessage(MessageFormat.success("Your nickname has been set to " + ((Player)sender).getDisplayName() + "."));
+    private static void commandSet(CommandSender sender, ArrayList<String> args) {
+        Main.getChatManager().setNick((Player)sender, ChatColor.RESET + ChatColor.translateAlternateColorCodes('&', args.get(0)) + ChatColor.RESET);
+        sender.sendMessage(ChatColor.GREEN + "Your nickname has been set to " + ((Player)sender).getDisplayName() + ChatColor.GREEN + ".");
     }
 
 }
